syntax = "proto3";

package tweet;
option go_package=".;tweetpb";

message SendTweetRequest {
	string AccessToken = 1;
	string AccessSecret = 2;
	string TweetContent = 3;
}

message SendTweetResponse {
	bool IsSuccess = 1;
}

message LoginRequest {
}

message LoginResponse {
	string RequestToken = 1;
	string AuthUrl = 2;
	string ErrorStr = 3;
}

message ReceivePINRequest {
	string RequestToken = 1;
	string verifier = 2;
}

message ReceivePINResponse {
	string AccessToken = 1;
	string AccessSecret = 2;
	string ErrorStr = 3;
}

message EchoRequest {
	string message = 1;
}

message EchoResponse {
	string message = 1;
}

service OAuthService{
	rpc Echo(EchoRequest) returns (EchoResponse){}
	rpc Login(LoginRequest) returns (LoginResponse){}
	rpc ReceivePIN(ReceivePINRequest) returns (ReceivePINResponse){}
}

service TweetService{
	rpc Echo(EchoRequest) returns (EchoResponse){}
	rpc SendTweet(SendTweetRequest) returns (SendTweetResponse){}
}